fix(Lightbox): Fix scrollbar width

--- a/src/components/ui-elements/Lightbox/Lightbox.module.scss
+++ b/src/components/ui-elements/Lightbox/Lightbox.module.scss
@@ -3,7 +3,7 @@
 
 body:has(.lightbox) {
 	overflow: hidden;
-	margin-right: 17px;
+	margin-right: 8px;
 }
 
 .lightbox {
